updated app, now using SQL lite to store data

--- a/TestApp2/TestApp2/view/Startpage.xaml
+++ b/TestApp2/TestApp2/view/Startpage.xaml
@@ -7,7 +7,7 @@
   <ListView x:Name="ListOfTasksView" ItemTapped ="ItemClicked">
     <ListView.ItemTemplate>
       <DataTemplate>
-        <TextCell Text="{Binding DisplayName}" />
+        <TextCell Text="{Binding Name}" />
       </DataTemplate>
     </ListView.ItemTemplate>
   </ListView>
