--- a/TestApp2/TestApp2/view/CreateTaskView.xaml
+++ b/TestApp2/TestApp2/view/CreateTaskView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TestApp2.CreateListItem">
+             x:Class="TestApp2.CreateTaskView">
   <ContentPage.Content>
     <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
       <Label Text="Please specifiy the name of the new entry:" />
