--- a/TestApp2/TestApp2/view/TaskListView.xaml
+++ b/TestApp2/TestApp2/view/TaskListView.xaml
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TestApp2.TaskList">
+             x:Class="TestApp2.TaskListView">
 
   <StackLayout>
   <ListView x:Name="EmployeeView">
     <ListView.ItemTemplate>
       <DataTemplate>
-        <TextCell Text="{Binding DisplayName}" />
+        <TextCell Text="{Binding Name}" />
       </DataTemplate>
     </ListView.ItemTemplate>
   </ListView>
